--- a/email/package.json
+++ b/email/package.json
@@ -4,12 +4,14 @@
   "description": "Email notification service for Oakland Privacy",
   "main": "index.js",
   "scripts": {
+    "start": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ahuynh",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.1"
   }
